<resources>
    <string name="app_name">Take Note</string>
    <string name="my_notes">My notes</string>
    <string name="search_hint">Search…</string>
    <string name="create_tag">+ Create tag</string>
    <string name="all_tags">All tags</string>
    <string name="add_note">Add Note</string>
    <string name="get_pro">Get Pro</string>
    <string name="new_badge">NEW</string>
    <string name="more_options">More options</string>
    <string name="settings">Settings</string>
    <string name="filter">Filter</string>
    <string name="add_new_note">Add new note</string>
    <string name="edit_note">Edit note</string>
    <string name="title_hint">Note title</string>
    <string name="description_hint">Write your note here…</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm_title">Delete Note</string>
    <string name="delete_confirm_message">Are you sure you want to delete this note?</string>
    <string name="note_saved">Note saved!</string>
    <string name="note_deleted">Note deleted!</string>
    <string name="empty_title_error">Please enter a title</string>
    <string name="no_notes_yet">No notes yet</string>
    <string name="no_notes_description">Tap the button below to create your first note</string>
</resources>